<resources>
    <string name="app_name">UF1_Proyecto</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="audiometrias">Historial de audiometrías</string>
    <string name="fechaAudiometría2009">4 de septiembre de 2009</string>
    <string name="fechaAudiometría2010">29 de diciembre de 2010</string>
    <string name="fechaAudiometría2012">21 de agosto de 2012</string>
    <string name="fechaAudiometría2013">25 de marzo de 2013</string>
    <string name="fechaAudiometría2014">18 de junio de 2014</string>
    <string name="fechaAudiometría2015">29 de julio de 2015</string>
    <string name="fechaAudiometría2016">22 de febrero de 2016</string>
    <string name="fechaAudiometría2017">7 de octubre de 2017</string>
    <string name="fechaAudiometría2018">29 de junio de 2018</string>
    <string name="fechaAudiometría2019">3 de julio de 2019</string>
    <string name="fechaAudiometría2024">20 de mayo de 2024</string>
    <string name="selecciónFechaCita">Seleccione una fecha para la cita:</string>
    <string name="selecciónHorarioCita">Seleccione una hora para la cita:</string>
    <string name="btnPedirCita">Pedir cita</string>
    <string name="txtRecordatorios">Recordatorios</string>
    <string name="txtOidoDerecho">Oído Derecho</string>
    <string name="txtOidoIzquierdo">Oído Izquierdo</string>
    <string name="citaConExito">Cita pedida con éxito.</string>
    <string name="verCita">Ver cita</string>
    <string name="txtAudiometriasMenu">Audiometrías</string>
    <string name="txtCitasMenu">Citas</string>
    <string name="txtRecordatorioMenu">Recordatorio</string>
    <string name="descripcion">Descripción</string>
    <string name="fechayhora">Fecha y hora</string>
    <string name="citaEn">Cita a las</string>
    <string name="horaPasada">La hora seleccionada ya ha pasado.</string>
    <string name="fechaValida">Ingrese una fecha válida.</string>
    <string name="seleccionHorario">Por favor, seleccione un horario</string>
    <string name="btnAgregarRecordatorio">Agregar Recordatorio</string>
    <string name="descripcionRecordatorio">Descripción del recordatorio</string>
    <string name="audiometriasTitulo">Audiometrías</string>
    <string name="audiometria">Audiometría</string>
    <string name="citas">Citas</string>
    <string name="exito">Éxito</string>
    <string name="nuevoRecordatorio">Nuevo Recordatorio</string>
    <string name="recordatorios">Recordatorios</string>
    <string name="ingreseDescripcion">Por favor, ingrese una descripción.</string>
    <string name="confirmarEliminacion">Confirmar eliminación</string>
    <string name="mensajeEliminacion">¿Estás seguro de que deseas eliminar este recordatorio?</string>
    <string name="si">Yes</string>
    <string name="no">No</string>
</resources>