<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:ignore="DuplicateIds"
        android:background="@color/white">

        <TextView
            android:id="@+id/txtAudiometrias"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/audiometrias"
            android:textSize="30dp"
            android:textStyle="bold"
            android:layout_margin="25dp"
            android:textColor="@color/black" />


        <androidx.cardview.widget.CardView
            android:id="@+id/cardAudiometria2009"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/hielo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="7dp"
                    android:layout_width="130dp"
                    android:layout_height="105dp"
                    android:src="@drawable/audiometria" />

                <TextView
                    android:id="@+id/fechaAudiometria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaAudiometría2009"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingLeft="30dp"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAudiometria2010"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/hielo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="7dp"
                    android:layout_width="130dp"
                    android:layout_height="105dp"
                    android:src="@drawable/audiometria" />

                <TextView
                    android:id="@+id/fechaAudiometria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaAudiometría2010"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingLeft="30dp"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAudiometria2012"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/hielo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="7dp"
                    android:layout_width="130dp"
                    android:layout_height="105dp"
                    android:src="@drawable/audiometria" />

                <TextView
                    android:id="@+id/fechaAudiometria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaAudiometría2012"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingLeft="30dp"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAudiometria2013"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/hielo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="7dp"
                    android:layout_width="130dp"
                    android:layout_height="105dp"
                    android:src="@drawable/audiometria" />

                <TextView
                    android:id="@+id/fechaAudiometria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaAudiometría2013"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingLeft="30dp"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAudiometria2014"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/hielo">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="7dp"
                    android:layout_width="130dp"
                    android:layout_height="105dp"
                    android:src="@drawable/audiometria" />

                <TextView
                    android:id="@+id/fechaAudiometria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaAudiometría2014"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingLeft="30dp"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAudiometria2015"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/hielo"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="7dp"
                    android:layout_width="130dp"
                    android:layout_height="105dp"
                    android:src="@drawable/audiometria" />

                <TextView
                    android:id="@+id/fechaAudiometria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaAudiometría2015"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingLeft="30dp"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAudiometria2016"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/hielo"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="7dp"
                    android:layout_width="130dp"
                    android:layout_height="105dp"
                    android:src="@drawable/audiometria" />

                <TextView
                    android:id="@+id/fechaAudiometria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaAudiometría2016"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingLeft="30dp"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAudiometria2017"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/hielo"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="7dp"
                    android:layout_width="130dp"
                    android:layout_height="105dp"
                    android:src="@drawable/audiometria" />

                <TextView
                    android:id="@+id/fechaAudiometria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaAudiometría2017"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingLeft="30dp"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAudiometria2018"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/hielo"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="7dp"
                    android:layout_width="130dp"
                    android:layout_height="105dp"
                    android:src="@drawable/audiometria" />

                <TextView
                    android:id="@+id/fechaAudiometria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaAudiometría2018"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingLeft="30dp"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAudiometria2019"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/hielo"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="7dp"
                    android:layout_width="130dp"
                    android:layout_height="105dp"
                    android:src="@drawable/audiometria" />

                <TextView
                    android:id="@+id/fechaAudiometria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaAudiometría2019"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingLeft="30dp"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardAudiometria2024"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            app:cardCornerRadius="15dp"
            app:cardBackgroundColor="@color/hielo"
            android:layout_marginBottom="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:layout_marginTop="7dp"
                    android:layout_width="130dp"
                    android:layout_height="105dp"
                    android:src="@drawable/audiometria" />

                <TextView
                    android:id="@+id/fechaAudiometria"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fechaAudiometría2024"
                    android:textSize="20sp"
                    android:layout_gravity="center"
                    android:paddingLeft="30dp"
                    android:textColor="@color/black" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>



    </LinearLayout>
</ScrollView>
