<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:id="@+id/txtSeleccioneFecha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecciónFechaCita"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:textSize="20dp"
            />

        <CalendarView
            android:id="@+id/calendarioCitas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />


        <TextView
            android:id="@+id/txtSeleccioneHorario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/selecciónHorarioCita"
            android:textAlignment="center"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:textSize="20dp"
            />


        <GridLayout
            android:id="@+id/gridHorarios"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="3"
            android:layout_marginBottom="20dp">

            <Button
                android:id="@+id/btnHorario1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="9:00"
                android:layout_margin="8dp"
                android:backgroundTint="@color/fondoCartas"
                android:textColor="@color/white"
                android:layout_columnWeight="1" />

            <Button
                android:id="@+id/btnHorario2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="10:00"
                android:layout_margin="8dp"
                android:backgroundTint="@color/fondoCartas"
                android:textColor="@color/white"
                android:layout_columnWeight="1" />

            <Button
                android:id="@+id/btnHorario3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="11:00"
                android:layout_margin="8dp"
                android:backgroundTint="@color/fondoCartas"
                android:textColor="@color/white"
                android:layout_columnWeight="1" />

            <Button
                android:id="@+id/btnHorario4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="12:00"
                android:layout_margin="8dp"
                android:backgroundTint="@color/fondoCartas"
                android:textColor="@color/white"
                android:layout_columnWeight="1" />

            <Button
                android:id="@+id/btnHorario5"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="13:00"
                android:layout_margin="8dp"
                android:backgroundTint="@color/fondoCartas"
                android:textColor="@color/white"
                android:layout_columnWeight="1" />

            <Button
                android:id="@+id/btnHorario6"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="16:00"
                android:layout_margin="8dp"
                android:backgroundTint="@color/fondoCartas"
                android:textColor="@color/white"
                android:layout_columnWeight="1" />
            <Button
                android:id="@+id/btnHorario7"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="17:00"
                android:layout_margin="8dp"
                android:backgroundTint="@color/fondoCartas"
                android:textColor="@color/white"
                android:layout_columnWeight="1" />
            <Button
                android:id="@+id/btnHorario8"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="18:00"
                android:layout_margin="8dp"
                android:backgroundTint="@color/fondoCartas"
                android:textColor="@color/white"
                android:layout_columnWeight="1" />
            <Button
                android:id="@+id/btnHorario9"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="19:00"
                android:layout_margin="8dp"
                android:backgroundTint="@color/fondoCartas"
                android:textColor="@color/white"
                android:layout_columnWeight="1" />
        </GridLayout>


        <Button
            android:id="@+id/btnPedirCita"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnPedirCita"
            android:backgroundTint="@color/azulClaro"
            android:textColor="@color/white"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="50dp"
            android:textSize="18sp"
            android:layout_gravity="center" />
    </LinearLayout>
</ScrollView>